fix(header): z-index fix

--- a/web/abstruse/src/styles/header.sass
+++ b/web/abstruse/src/styles/header.sass
@@ -128,7 +128,7 @@ $header-height: 60px
     box-shadow: $box-shadow
     text-transform: none
     border: 1px solid $border-default
-    z-index: 9
+    z-index: 20
 
     &::after
       position: absolute
